--- a/index.html
+++ b/index.html
@@ -11,15 +11,32 @@
   <body>
     <header>
         <div class="logo">
-            <img src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/ic-logo.svg">
-            <p>COLMAR<span class="academy">ACADEMY</span></p>
+            <div class="logo-image">
+              <img src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/ic-logo.svg">
+             </div>
+             <p>COLMAR<span class="academy">ACADEMY</span></p>
+             
     <div class="right-text" style="float:right;">
                 <p>On Campus</p>
                 <p>Online</p>
                 <p>Our Companies</p>
                 <p>Sign in</p>
-    </div>
         </div>
+      </div>  
     </header> 
+    <div class="learn">
+      <div class="banner-img">
+       <img src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/banner.jpg">
+       <div class="learn-something">
+        <h3>Learn something<br>new everyday</h3>
+        <div class="lorem">
+          <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit</p>
+        <div class="start-button">
+          <p>Start here</p>
+          </div>
+        </div>
+       </div>
+      </div>
+    </div>
   </body>
   </html>
