whoops left out the html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <div class="learn-something">
         <h3>Learn something<br>new everyday</h3>
         <div class="lorem">
-          <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit</p>
+          <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
         <div class="start-button">
           <p>Start here</p>
           </div>
