--- a/index.html
+++ b/index.html
@@ -38,5 +38,42 @@
        </div>
       </div>
     </div>
+
+   <div class="doesnt-hurt">
+    <div class="information-main">
+      <img class="info-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/information-main.jpg">
+      <div class="practicing">
+        <h3>It doesn't hurt to keep practicing</h3>
+        <div class="curabitur">
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commando lectus, nec consequat neque. Sed non accumsan urna. 
+            Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</p>
+          
+          
+          <p>Emanuel, Sr Strategist at Hiring.com</p>
+         <div class="image-panel" style="float:right;">
+           <div>
+             <img class="images" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/information-orientation.jpg">
+             <p class="info-text">Orientation date</p>
+             <p class="info-text">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+             <p class="info-text">Read more</p>
+           </div>
+           <div>
+             <img class="images" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/information-campus.jpg">
+             <p class="info-text">Our Campus</p>
+             <p class="info-text">Find which campus is close by you</p>
+             <p class="info-text">Read More</p>
+            </div>
+            <div class="guest">
+             <img class="images" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/information-guest-lecture.jpg">
+             <p class="info-text">Our guest lecture</p>
+             <p class="info-text">Join a keynote with Oliver Sack about music in medical treatment</p>
+             <p class="info-text">Read More</p> 
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>   
   </body>
   </html>
