added learning panel

--- a/index.html
+++ b/index.html
@@ -82,6 +82,69 @@
         </div>
        </div> 
       </div>
-    </div>  
+    </div>
+    
+  <div class="start-learning">
+    <span class="sl"><h2>Start Learning</h2></span>
+    
+   
+   <div class="learning-panel">
+
+    <div class="software">
+      <img class="software-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-software.jpg">
+      <div class="software-text">
+      <span class="learning-header"><p>Software engineering</p></span>
+      <span class="courses"><p>COURSES</p></span>
+      <span class="learning-copy"><p>Web Development, Mobile Development, iOT, APIs</p></span>
+      </div>
+    </div>
+
+    <div class="computer">
+      <img class="computer-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-computer-art.jpg">
+      <div class="computer-text">
+      <span class="learning-header"><p>Computer art</p></span>
+      <span class="courses"><p>COURSES</p></span>
+      <span class="learning-copy"><p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p></span>  
+      </div>
+    </div>
+
+    <div class="design">
+      <img class="design-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-design.jpg">
+      <div class="design-text">
+        <span class="learning-header"><p>Design</p></span>
+        <span class="courses"><p>COURSES</p></span>
+        <span class="learning-copy"><p>User Experience Design, User Research, Visual Design</p></span>
+      </div>
+    </div>
+
+    <div class="data">
+      <img class="data-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-data.jpg">
+      <div class="data-text">
+        <span class="learning-header"><p>Data</p></span>
+        <span class="courses"><p>COURSES</p></span>
+        <span class="learning-copy"><p>Data Science, Big Data, SQL, Data Visualization</p></span>
+      </div>
+    </div>
+
+    <div class="business">
+      <img class="business-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-business.jpg">
+      <div class="business-text">
+        <span class="learning-header"><p>Business</p></span>
+        <span class="courses"><p>COURSES</p></span>
+        <span class="learning-copy"><p>Product Development, Business Development, Startup</p></span>
+      </div>
+    </div>
+
+    <div class="marketing">
+      <img class="marketing-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/course-marketing.jpg">
+      <div class="marketing-text">
+        <span class="learning-header"><p>Marketing</p></span>
+        <span class="courses"><p>COURSES</p></span>
+        <span class="learning-copy"><p>Analytics, Content Marketing, Mobile Marketing</p></span>
+      </div>
+    </div>
+
+    </div>
+   </div>
   </body>
   </html>
