finished final section of desktop site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Colmar Academy</title>
       
     </head> 
-  <body>
+   <body>
     <header>
         <div class="logo">
             <div class="logo-image">
@@ -149,5 +149,50 @@
      </div>
     </div>
    </div>
+
+   <div class="thesis">
+    <div class="thesis-header">
+      <h2>Thesis exhibit</h2>
+     </div>
+     <div class="video">
+      <video class="video" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/videos/thesis.mp4" controls></video>
+     </div>
+    <div class="reimagine">
+     <span class="reimagine-head"><p>Reimagine urban</p></span>
+     <div class="reimagine-copy">
+      <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commando lectus, nec consequat neque. Sed non accumsan urna. 
+        Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tirstique ligula"</p>
+     </div> 
+    </div>
+
+   <div class="image-panel2">
+     
+     <div class="fisma">
+      <img class="fisma-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/thesis-fisma.jpg">
+      <div class="fisma-text">
+        <span class="two-header"><p>Fisma: Design and Prototype</p></span>
+        <span class="two-text"><p>Designer showcase of new prototype product</p></span>
+      </div>
+     </div>
+
+     <div class="now-then">
+      <img class="now-then-img" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/thesis-now-and-then.jpg">
+      <div class="now-then-text">
+        <span class="two-header"><p>Now and then</p></span>
+        <span class="two-text"><p>Research study about New York</p></span>
+      </div>
+     </div>
+
+      </div>
+     </div>
+
+   <footer>
+    <div class="footer-left">
+      <p>© 2016 Colmar Academy. All rights reserved</p>
+    </div>
+    <div class="footer-right">
+      <p>Terms    Privacy</p>
+    </div>
+   </footer>
   </body>
   </html>
