finished mobile version, correcting some styles on desktop, ADA pass

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
        <div class="guest-m">
         <img class="guest-image-m" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg">
         <div class="guest-text-m">
-        <span class="panel-header-m"><p>Our guest lecture</p></span>
+        <span class="panel-header-m"><p>Special guest lecture</p></span>
         <span class="keynote-m"><p>Join a keynote with Oliver Sack<br>about music in medical treatment</p></span>
         <span class="read-more-m"><p style="color: rgba(65, 65, 243, 0.856);">Read more</p></span>
         </div>
@@ -196,6 +196,36 @@
     </div>
    </div>
 
+   <div class="start-learning-m">
+    
+   <div class="start-learning-m-header">
+     <div class="m-header">
+     <span class="sl-heading-m"><h3>Start Learning</h3></span>
+      </div>
+     </div>
+
+     <div class="start-learning-m-buttons">
+      <div class="software-m">
+        <span class="m-text-buttons"><p>Software engineering</p></span>
+      </div>
+      <div class="computer-m">
+        <span class="m-text-buttons"><p>Computer art</p></span>
+      </div>
+      <div class="design-m">
+        <span class="m-text-buttons"><p>Design</p></span>
+      </div>
+      <div class="data-m">
+        <span class="m-text-buttons"><p>Data</p></span>
+      </div>
+      <div class="business-m">
+        <span class="m-text-buttons"><p>Business</p></span>
+      </div>
+      <div class="marketing-m">
+        <span class="m-text-buttons"><p>Marketing</p></span>
+      </div>
+     </div>
+   </div>
+
    <div class="thesis">
     <div class="thesis-header">
       <h2>Thesis exhibit</h2>
@@ -232,6 +262,15 @@
       </div>
      </div>
 
+    <div class="thesis-m">
+      <div class="thesis-header-m">
+        <span class="th-m-text"><h2>Thesis exhibits</h2></span>
+      </div>
+      <div class="video-m">
+        <video class="video-m" src="resources/assets/capstone_colmar_assets/capstone_colmar_assets/videos/thesis.mp4" controls></video>
+      </div>
+    </div>
+
    <footer>
     <div class="footer-left">
       <p>© 2016 Colmar Academy. All rights reserved</p>
@@ -239,6 +278,11 @@
     <div class="footer-right">
       <p>Terms    Privacy</p>
     </div>
+
+   <div class="footer-m">
+    <span class="footer-m-text"><p>© Colmar Academy. All rights reserved</p></span>
+   </div>
+    
    </footer>
   </body>
   </html>
