--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="resources/style.css">
         <title>Colmar Academy</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+        <link rel="icon" type="image/png" href="resources/assets/capstone_colmar_assets/capstone_colmar_assets/images/ic-favicon.png">
     </head> 
    <body>
     <header>
